salesforce/force-app/main/default/objects/Employment__c/Employment__c.object-meta.xml
<CustomObject>
    <label>Employment</label>
    <pluralLabel>Employment</pluralLabel>
    <nameField>
        <label>Employment Number</label>
        <type>AutoNumber</type>
        <displayFormat>EMP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One row per company a Contact has worked for. Mirrors the Zoho Employment
        module used by the &quot;Employment history&quot; widget: exactly one row per Contact
        should have Is_Main__c = true.</description>
</CustomObject>