salesforce/force-app/main/default/objects/Employment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment Records</relationshipLabel>
    <relationshipName>Employment_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set when the company typed in Company__c matched an existing Account during import or entry. Free-text company names are allowed, so this can be blank.</description>
</CustomField>