salesforce/force-app/main/default/objects/Employment__c/fields/Buyer_Role__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Role__c</fullName>
    <label>Buyer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Economic</fullName><default>false</default><label>Economic</label></value>
            <value><fullName>Technical</fullName><default>false</default><label>Technical</label></value>
            <value><fullName>User</fullName><default>false</default><label>User</label></value>
            <value><fullName>Coach</fullName><default>false</default><label>Coach</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>