salesforce/force-app/main/default/objects/Employment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Note</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>