salesforce/force-app/main/default/objects/Employment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Free-text company name. Most people arrive from companies that are not Accounts, so this is not forced to match Account__c.</description>
</CustomField>