salesforce/force-app/main/default/objects/Employment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
</CustomField>