salesforce/force-app/main/default/objects/Employment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>Blank means still current. Mirrors the Zoho End_Date semantics (null = present).</description>
</CustomField>