salesforce/force-app/main/default/objects/Employment__c/fields/Is_Main__c.field-meta.xml
<CustomField>
    <fullName>Is_Main__c</fullName>
    <label>Is Main</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Exactly one Employment__c row per Contact should carry true at any time. Not
        enforced by a validation rule on this object on purpose — see
        EmploymentHistoryController.setMainEmployment, which is the single write path that
        maintains the invariant (unset all, then set one, in that order).</description>
</CustomField>