salesforce/force-app/main/default/objects/Employment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Current</fullName><default>false</default><label>Current</label></value>
            <value><fullName>Past</fullName><default>false</default><label>Past</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>